syntax = "proto3";

package blast.v1.notification;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/api/resource.proto";
import "google/api/client.proto";

option go_package = "github.com/ao-labs/spacebar-apis/go/blast/v1/notifications;notifications";

// NotificationService contains the function to interact with the Notification of the spacebar
service NotificationService {
  // Signin signs in a user and returns a session id.
  rpc ListNotifications(ListNotificationsRequest) returns (ListNotificationsResponse) {
    option (google.api.http) = {
      get: "/v1/{parent=users/*}/notifications"
    };
    option (google.api.method_signature) = "";
  }

  // AcknowledgeNotification acknowledges a notification.
  rpc AcknowledgeNotification(AcknowledgeNotificationRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/{name=users/*/notifications/*}:ack"
      body: "name"
    };
    option (google.api.method_signature) = "name";
  }

}

message ListNotificationsRequest {

  // The resource name of User.
  // User is required.
  // Format: users/{address}
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "station.spacebarapis.xyz/User",
    }
  ];

  // The maximum number of items to return. The service may return fewer than this value.
  // If unspecified, at most 50 rows will be returned.
  // The maximum value is 1024; values above 1024 will be coerced to 1024.
  int32 page_size = 2;

  // Token of the page to retrieve. If not specified, the first
  // page of results will be returned. Use the value obtained from
  // `next_page_token` in the previous response in order to request
  // the next page of results.
  //
  // When paginating, all other parameters provided to `ListNotifications` must match
  // the call that provided the page token.
  string page_token = 3;

  // Available Sequence and Operator
  // * state
  //   * `Equal`
  // * type
  //   * `Equal`
  //
  // Examples
  // * state=CREATED
  // * type=INFO_POINTS_GIVEN
  string filter = 4;
}

message ListNotificationsResponse {
  repeated Notification notifications = 1;

  string next_page_token = 2;
}

message AcknowledgeNotificationRequest {
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "station.spacebarapis.xyz/Notification",
    }
  ];
}


// Type of the notification.
enum NotificationType {
  // default value. this value is unused.
  TYPE_UNSPECIFIED = 0;

  // Plain text info message.
  INFO = 100;

  // DEPRECATED: Use INFO_SPACEBAR_POINTS_GIVEN instead.
  INFO_POINTS_GIVEN = 101;

  INFO_SPACEBAR_POINTS_GIVEN = 110;

  INFO_BLAST_GOLD_GIVEN = 111;

  INFO_BLAST_TOKEN_GIVEN = 112;
}

// Action type that can be performed on the notification.
enum NotificationAction {
  // default value. this value is unused.
  ACTION_UNSPECIFIED = 0;

  // No operation.
  NO_OP = 1;

  // Navigate to the points page.
  NAVIGATE_POINTS_PAGE = 100;
}

// State of the notification.
enum NotificationState {
  // default value. this value is unused.
  STATE_UNSPECIFIED = 0;

  //
  CREATED = 1;

  //
  ACKNOWLEDGED = 2;

  //
  EXPIRED = 3;
}

enum NotificationContentIcon {
  // default value. this value is unused.
  ICON_UNSPECIFIED = 0;

  ICON_SPACEBAR_POINTS = 1;

  ICON_BLAST_GOLD = 2;

  ICON_BLAST_TOKEN = 3;

}

message Notification {
  option (google.api.resource) = {
    type: "station.spacebarapis.xyz/Notification",
    pattern: "users/{user_address}/notifications/{id}"
  };

  // The resource name of the Notification.
  // Format: users/{user_address}/notifications/{id}
  string name = 1;

  // The resource name of User.
  // Format: users/{address}
  string user = 2 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.resource_reference) = {
      type: "station.spacebarapis.xyz/User",
    }
  ];

  // The id of Notification.
  uint64 id = 3 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  NotificationType type = 4 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  NotificationAction action = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  NotificationState state = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  NotificationContentIcon icon = 7 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  string title = 8 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  string body = 9 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  map<string, string> metadata = 10 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The created time of Notification.
  // RFC3339 format e.g. "2006-01-02T15:04:05Z07:00"
  google.protobuf.Timestamp create_time = 13 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The expire time of Notification if exists.
  // RFC3339 format e.g. "2006-01-02T15:04:05Z07:00"
  optional google.protobuf.Timestamp expire_time = 14 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

  // The acknowledged time of Notification.
  optional google.protobuf.Timestamp acknowledge_time = 15 [
    (google.api.field_behavior) = OUTPUT_ONLY
  ];

}
